fix: css overflow bug fixed ostiaaaaaa

--- a/assets/styles/about-me_section.scss
+++ b/assets/styles/about-me_section.scss
@@ -1,25 +1,23 @@
 // ABOUT ME SECTION STYLES
 
 .about_blobs {
-    width: auto;
-    height: auto;
+    width: 100%;
     position: relative;
+    padding: 3rem;
 
     #blob-left-corner {
-        position: absolute;
-        max-width: 20em;
-        display: inline-block;
-
-        left: -170px;
+        position: relative;
+        width: 80%;
+        transform: translateX(-180px);
+        
     }
 
     #blob-left-corner-shadow {
         position: absolute;
-        max-width: 20em;
+        width: 70%;
+        left: -160px;
+        top: 25%;
         z-index: -1;
-
-        left: -165px;
-        top: 15px;
     }
 }
 
@@ -30,7 +28,9 @@
     justify-content: center;
 
     position: relative;
-    top: 150px;
+
+    // el error
+    //top: 150px;
     padding: 2rem;
 
     
